--- a/first_app/templates/first_app/status.html
+++ b/first_app/templates/first_app/status.html
@@ -1,51 +1,54 @@
 <br>
 
 <div class="row">
-	<div class="col">
-		<div class="col-md">
-			<div class="card text-center text-white  mb-3" id="monthly-return">
-			  	<div class="card-header">
-			  		<h5 class="card-title">
-                        Monthly Return on Investments
+    <div class="col">
+        <div class="col-md">
+            <div class="card text-center text-white mb-3" id="investments-total">
+                  <div class="card-header">
+                      <h5 class="card-title">
+                        Investments Total Value
                     </h5>
-			  	</div>
-			  	<div class="card-body">
-			    	<h3 class="card-title">
+                  </div>
+                  <div class="card-body">
+                    <h3 class="card-title">
+                      {{investments_sum}}
                     </h3>
-			  	</div>
-			</div>
-		</div>
-	</div>
+                  </div>
+            </div>
+        </div>
+    </div>
 
-	<div class="col">
-		<div class="col-md">
-			<div class="card text-center text-white  mb-3" id="annual-return">
-			  	<div class="card-header">
-			  		<h5 class="card-title">
-                        Annual Return on Investments
+    <div class="col">
+        <div class="col-md">
+            <div class="card text-center text-white mb-3" id="spends-total">
+                  <div class="card-header">
+                      <h5 class="card-title">
+                        Spends Total Value
                     </h5>
-			  	</div>
-			  	<div class="card-body">
-			    	<h3 class="card-title">
+                  </div>
+                  <div class="card-body">
+                    <h3 class="card-title">
+                      {{spends_sum}}
                     </h3>
-			  	</div>
-			</div>
-		</div>
-	</div>
+                  </div>
+            </div>
+        </div>
+    </div>
 
-	<div class="col">
-		<div class="col-md">
-			<div class="card text-center text-white  mb-3" id="goods-total">
-			  	<div class="card-header">
-			  		<h5 class="card-title">
-                        Goods <br> Total Value
+    <div class="col">
+        <div class="col-md">
+            <div class="card text-center text-white mb-3" id="goods-total">
+                  <div class="card-header">
+                      <h5 class="card-title">
+                        Goods Total Value
                     </h5>
-			  	</div>
-			  	<div class="card-body">
-			    	<h3 class="card-title">
+                  </div>
+                  <div class="card-body">
+                    <h3 class="card-title">
+                        {{goods_sum}}
                     </h3>
-			  	</div>
-			</div>
-		</div>
-	</div>
+                  </div>
+            </div>
+        </div>
+    </div>
 </div>
