--- a/first_app/templates/first_app/navbar.html
+++ b/first_app/templates/first_app/navbar.html
@@ -2,7 +2,7 @@
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <!-- <img src="{% static 'images/logo.png' %}">-->
-    <a class="navbar-brand" href="#">
+    <a class="navbar-brand" href="{% url 'home' %}">
         Management Tools
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -17,13 +17,13 @@
                 </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="{% url 'prices' %}">
-                    Prices
+                <a class="nav-link" href="{% url 'time' %}">
+                    Time Management
                 </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="{% url 'money' %}">
-                    Money control
+                <a class="nav-link" href="{% url 'budget' %}">
+                    Budget Control
                 </a>
             </li>
         </ul>
