--- a/first_app/templates/first_app/main.html
+++ b/first_app/templates/first_app/main.html
@@ -4,6 +4,7 @@
 <html lang="en">
     <head>
         <title>Management Portal</title>
+        <link rel="shortcut icon" type="image/png" href="{% static 'images/favicon.png' %}"/>
         <link rel="stylesheet" 
         href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" 
         integrity="sha384-
