--- a/first_app/templates/first_app/navbar.html
+++ b/first_app/templates/first_app/navbar.html
@@ -2,7 +2,7 @@
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <!-- <img src="{% static 'images/logo.png' %}">-->
-    <a class="navbar-brand" href="{% url 'home' %}">
+    <a class="navbar-brand" href="{% url 'budget' %}">
         Management Tools
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -16,14 +16,14 @@
                     Home
                 </a>
             </li>
-            <li class="nav-item">
-                <a class="nav-link" href="{% url 'time' %}">
-                    Time Management
-                </a>
-            </li>
-            <li class="nav-item">
+            <li class="nav-item active">
                 <a class="nav-link" href="{% url 'budget' %}">
                     Budget Control
+                </a>
+            </li>
+            <li class="nav-item active">
+                <a class="nav-link" href="{% url 'logout' %}">
+                    Logout
                 </a>
             </li>
         </ul>
