--- a/first_app/templates/first_app/budget_control.html
+++ b/first_app/templates/first_app/budget_control.html
@@ -57,7 +57,7 @@
         </div>
     </div>
 </div>
-
+<br>
 <div class="row">
     <div class="col">
         <div class="col-md">
@@ -66,7 +66,7 @@
             </h5>
             <hr>
             <div class="table-responsive">
-                <a class="btn btn-primary btn-hover btn-block" href="">
+                <a class="btn btn-primary btn-hover btn-block" href="{% url 'add' %}">
                     Add records
                 </a>
                 <table class="table table-hover table-dark">
@@ -85,8 +85,8 @@
                             <td>{{register.category}}</td>
                             <td>{{register.value}}</td>
                             <td>{{register.month}}</td>
-                            <td><a href="">Update</a></td>
-                            <td><a href="">Delete</a></td>
+                            <td><a class="btn btn-sm btn-info" href="{% url 'update' register.id %}">Update</a></td>
+                            <td><a class="btn btn-sm btn-danger" href="{% url 'delete' register.id %}">Delete</a></td>
                         </tr>
                     {% endfor %}
 
