--- a/first_app/templates/first_app/home.html
+++ b/first_app/templates/first_app/home.html
@@ -6,10 +6,10 @@
     <div class="jumbotron">
         <div class="container">
             <h1 class="display-3">
-                TODO
+                Management Tools
             </h1>
             <p>
-                TODO Colocar aqui informações explicativas
+                Management Tools has the mission to help people organize their financial life.
             </p>
         </div>
     </div>
@@ -18,32 +18,31 @@
         <div class="row">
             <div class="col-md-6">
                 <h2>
-                    Time Management
+                    Login
                 </h2>
                 <p>
-                    TODO Colocar aqui explicação de como funciona o Time Mangement 
+                    If you already have an account, login.
                 </p>
                 <p>
-                    <a class="btn btn-primary btn-lg" href="{% url 'time' %}" role="button">
-                        Time Management &raquo;
+                    <a class="btn btn-primary btn-lg" href="{% url 'login' %}" role="button">
+                        Login &raquo;
                     </a>
                 </p>
             </div>
             <div class="col-md-6">
                 <h2>
-                    Budget Control
+                    Create User
                 </h2>
                 <p>
-                    TODO Colocar aqui explicação de como funciona o Budget Control
+                    If you are new, create a new user and start organizing your life.
                 </p>
                 <p>
-                    <a class="btn btn-primary btn-lg" href="{% url 'budget' %}" role="button">
-                        Budget Control &raquo;
+                    <a class="btn btn-primary btn-lg" href="{% url 'register' %}" role="button">
+                        Create user &raquo;
                     </a>
                 </p>
             </div>
         </div>
-        <hr>
     </div>
 </main>
 
