Fixing login bug using redirect insted of render / linking data to the users

--- a/first_app/templates/first_app/add_records.html
+++ b/first_app/templates/first_app/add_records.html
@@ -5,6 +5,11 @@
 <form method="POST" action="">
 
     {% csrf_token %}
+    <p style="display:none;">
+        {{form.user.label}}
+        {{form.user}}
+    </p>
+
     {{form.name.label}}
     {{form.name}}
 
