commiting a lot of stuff

--- a/first_app/templates/first_app/budget_control.html
+++ b/first_app/templates/first_app/budget_control.html
@@ -14,7 +14,7 @@
             </h5>
             <hr>
             <div class="table-responsive">
-                <table class="table table-hover table-dark">
+                <table class="table table-dark">
                     <thead>
                         <tr>
                             <th scope="col">Month</th>
@@ -69,7 +69,7 @@
                 <a class="btn btn-primary btn-hover btn-block" href="{% url 'add' %}">
                     Add records
                 </a>
-                <table class="table table-hover table-dark">
+                <table class="table table-dark">
                     <tr>
                         <th>Name</th>
                         <th>Category</th>
