--- a/first_app/templates/first_app/home.html
+++ b/first_app/templates/first_app/home.html
@@ -13,7 +13,7 @@
             </p>
         </div>
     </div>
-
+    <hr>
     <div class="container">
         <div class="row">
             <div class="col-md-6">
@@ -25,7 +25,7 @@
                 </p>
                 <p>
                     <a class="btn btn-primary btn-lg" href="{% url 'login' %}" role="button">
-                        Login &raquo;
+                        Login
                     </a>
                 </p>
             </div>
@@ -38,7 +38,7 @@
                 </p>
                 <p>
                     <a class="btn btn-primary btn-lg" href="{% url 'register' %}" role="button">
-                        Create user &raquo;
+                        Create user
                     </a>
                 </p>
             </div>
