--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -28,7 +28,26 @@
                     </div>
                 </form>
             </div>
-            {{form.errors}}
+            <hr>
+            {% for message in messages %}
+                {% if message.tags == 'error' %}
+                    <div class="alert alert-danger" role="alert">
+                        {{message}}
+                    </div>
+                {% elif message.tags == 'warning' %}
+                    <div class="alert alert-warning" role="alert">
+                        {{message}}
+                    </div>
+                {% elif message.tags == 'info' %}
+                    <div class="alert alert-info" role="alert">
+                        {{message}}
+                    </div>
+                {% elif message.tags == 'success' %}
+                    <div class="alert alert-success" role="alert">
+                        {{message}}
+                    </div>
+                {% endif %}
+            {% endfor %}
             <div class="mt-4">
                 <div class="d-flex justify-content-center links">
                     Don't have an account? <a href="{% url 'register' %}" class="ml-2">Sign Up</a>
