--- a/first_app/templates/first_app/add_records.html
+++ b/first_app/templates/first_app/add_records.html
@@ -2,28 +2,50 @@
 
 {% block content %}
 
-<form method="POST" action="">
+<div class="container h-100" name="form-container">
+    <div class="d-flex justify-content-center h-100">
+        <div class="user_card">
+            <div class="d-flex justify-content-center">
+                <h3 id="form-title">{{operation_type}} register</h3>
+            </div>
+            <div class="d-flex justify-content-center form_container">
 
-    {% csrf_token %}
-    <p style="display:none;">
-        {{form.user.label}}
-        {{form.user}}
-    </p>
+                <form method="POST" action="">
+                    {% csrf_token %}
 
-    {{form.name.label}}
-    {{form.name}}
+                    <p style="display:none;">
+                        {{form.user.label}}
+                        {{form.user}}
+                    </p>
 
-    {{form.category.label}}
-    {{form.category}}
+                    <div class="table-responsive">
+                        <table class="table table-borderless form_container">
+                            <tr>
+                                <th>Name:</th>
+                                <td>{{form.name}}</td>
+                            </tr>
+                            <tr>
+                                <th>Category:</th>
+                                <td>{{form.category}}</td>
+                            </tr>
+                            <tr>
+                                <th>Value:</th>
+                                <td>{{form.value}}</td>
+                            </tr>
+                            <tr>
+                                <th>Month:</th>
+                                <td>{{form.month}}</td>
+                            </tr>
+                        </table>
+                    </div>
 
-    {{form.value.label}}
-    {{form.value}}
-
-    {{form.month.label}}
-    {{form.month}}
-
-    <input class="btn" type="submit" name="submit">
-
-</form>
+                    <div class="d-flex justify-content-center mt-3 login_container">
+                        <input class="btn btn-success" type="submit" name="Confirm" value="Confirm">
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
 
 {% endblock %}
