--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -1,60 +1,78 @@
-{% extends 'first_app/main.html' %}
+{% extends 'first_app/template.html' %}
 
 {% block content %}
 
-<div class="container h-100" name = "form-container">
-    <div class="d-flex justify-content-center h-100">
-        <div class="user_card">
-            <div class="d-flex justify-content-center">
-                <h3 id="form-title">LOGIN</h3>
-            </div>
-            <div class="d-flex justify-content-center form_container">
-                <form method="POST" action="">
-                    {% csrf_token %}
-                    <div class="input-group mb-3">
-                        <div class="input-group-append">
-                            <span class="input-group-text"><i class="fas fa-user"></i></span>
+<main role="main">
+    <div class="jumbotron">
+        <div class="container">
+            <h1 class="display-3">
+                Assistente Financeiro
+            </h1>
+            <h3>
+                O Assistente Financeiro tem a missão de te ajudar a organizar a sua vida financeira.
+            </h3>
+        </div>
+    </div>
+    <div class="container">
+        <div class="row">
+            <div class="container h-100" name = "form-container">
+                <div class="d-flex justify-content-center h-100">
+                    <div class="user_card">
+                        <div class="d-flex justify-content-center form_container">
+                            <form method="POST" action="">
+                                {% csrf_token %}
+                                <div class="input-group mb-3">
+                                    <div class="input-group-append">
+                                        <span class="input-group-text"><i class="fas fa-user"></i></span>
+                                    </div>
+                                    <input type="text" name="username" placeholder="Nome de usuário..." class="form-control">
+                                </div>
+                                <div class="input-group mb-2">
+                                    <div class="input-group-append">
+                                        <span class="input-group-text"><i class="fas fa-key"></i></span>
+                                    </div>
+                                    <input type="password" name="password" placeholder="Senha..." class="form-control" >
+                                </div>
+                                <div class="d-flex justify-content-center mt-3 login_container">
+                                    <input class="btn login_btn" type="submit" value="Entrar">
+                                </div>
+                            </form>
                         </div>
-                        <input type="text" name="username" placeholder="Username..." class="form-control">
-                    </div>
-                    <div class="input-group mb-2">
-                        <div class="input-group-append">
-                            <span class="input-group-text"><i class="fas fa-key"></i></span>
+                        <hr>
+                        {% for message in messages %}
+                            {% if message.tags == 'error' %}
+                                <div class="alert alert-danger" role="alert">
+                                    {{message}}
+                                </div>
+                            {% elif message.tags == 'warning' %}
+                                <div class="alert alert-warning" role="alert">
+                                    {{message}}
+                                </div>
+                            {% elif message.tags == 'info' %}
+                                <div class="alert alert-info" role="alert">
+                                    {{message}}
+                                </div>
+                            {% elif message.tags == 'success' %}
+                                <div class="alert alert-success" role="alert">
+                                    {{message}}
+                                </div>
+                            {% endif %}
+                        {% endfor %}
+                        <div class="mt-4">
+                            <hr>
+                            <div class="d-flex justify-content-center links">
+                                <a href="{% url 'register' %}" class="ml-2">
+                                    <button type="button" class="btn btn-success">
+                                        Criar nova conta
+                                    </button>
+                                </a>
+                            </div>
                         </div>
-                        <input type="password" name="password" placeholder="Password..." class="form-control" >
                     </div>
-                    <div class="d-flex justify-content-center mt-3 login_container">
-                        <input class="btn login_btn" type="submit" value="Login">
-                    </div>
-                </form>
-            </div>
-            <hr>
-            {% for message in messages %}
-                {% if message.tags == 'error' %}
-                    <div class="alert alert-danger" role="alert">
-                        {{message}}
-                    </div>
-                {% elif message.tags == 'warning' %}
-                    <div class="alert alert-warning" role="alert">
-                        {{message}}
-                    </div>
-                {% elif message.tags == 'info' %}
-                    <div class="alert alert-info" role="alert">
-                        {{message}}
-                    </div>
-                {% elif message.tags == 'success' %}
-                    <div class="alert alert-success" role="alert">
-                        {{message}}
-                    </div>
-                {% endif %}
-            {% endfor %}
-            <div class="mt-4">
-                <div class="d-flex justify-content-center links">
-                    Don't have an account? <a href="{% url 'register' %}" class="ml-2">Sign Up</a>
                 </div>
             </div>
         </div>
     </div>
-</div>
+</main>
 
 {% endblock %}
