--- a/first_app/templates/first_app/budget_control.html
+++ b/first_app/templates/first_app/budget_control.html
@@ -1,6 +1,8 @@
-{% extends 'first_app/main.html' %}
+{% extends 'first_app/template.html' %}
 
 {% block content %}
+
+{% include 'first_app/navbar.html' %}
 
 {%  include 'first_app/status.html' %}
 
@@ -10,26 +12,26 @@
     <div class="col">
         <div class="col-md">
             <h5>
-                Monthly Budget Calculation:
+                Cálculo mensal do orçamento:
             </h5>
             <hr>
             <div class="table-responsive">
                 <table class="table table-dark">
                     <thead>
                         <tr>
-                            <th scope="col">Month</th>
+                            <th scope="col">Mês</th>
                             <th scope="col">Jan</th>
-                            <th scope="col">Feb</th>
+                            <th scope="col">Fev</th>
                             <th scope="col">Mar</th>
-                            <th scope="col">Apr</th>
-                            <th scope="col">May</th>
+                            <th scope="col">Abr</th>
+                            <th scope="col">Mai</th>
                             <th scope="col">Jun</th>
                             <th scope="col">Jul</th>
-                            <th scope="col">Aug</th>
-                            <th scope="col">Sep</th>
-                            <th scope="col">Oct</th>
+                            <th scope="col">Ago</th>
+                            <th scope="col">Set</th>
+                            <th scope="col">Out</th>
                             <th scope="col">Nov</th>
-                            <th scope="col">Dec</th>
+                            <th scope="col">Dez</th>
                         </tr>
                     </thead>
                     <tbody>
