--- a/first_app/templates/first_app/delete.html
+++ b/first_app/templates/first_app/delete.html
@@ -1,4 +1,6 @@
-{% extends 'first_app/main.html' %}
+{% extends 'first_app/template.html' %}
+
+{% include 'first_app/navbar.html' %}
 
 {% block content %}
 
