--- a/first_app/templates/first_app/template.html
+++ b/first_app/templates/first_app/template.html
@@ -1,36 +1,44 @@
 {% load static %}
 
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
     <head>
-        <title>Management Portal</title>
+        <title>Assistente Financeiro</title>
 
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
 
-        <link rel="shortcut icon" type="image/png" href="{% static 'images/favicon.png' %}"/>
-        
-        <link rel="stylesheet" 
-        href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" 
-        integrity="sha384-
-        ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" 
-        crossorigin="anonymous">
+        <link rel="shortcut icon" type="image/png" href="{% static 'images/icon.png' %}"/>
 
-        <link rel="stylesheet" type="text/css" href="{% static "/css/main.css" %}">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
+        <link rel="stylesheet" type="text/css" href="{% static "/css/template.css" %}">
 
     </head>
     <body>
-        {% include 'first_app/navbar.html' %}
 
         {% block content %}
 
         {% endblock %}
 
         <br>
-        <hr>
-        <footer class="container">
-            <p>&copy; Management Tools 2020</p>
+
+        <footer class="footer mt-auto py-3">
+            <hr>
+            <div class="container">
+                <span class="text-muted">Assistente Financeiro &copy; 2020</span>
+            </div>
+            <div class="container">
+                Icons made by
+                <a href="https://www.flaticon.com/authors/freepik" title="Freepik">
+                    Freepik
+                </a> 
+                from 
+                <a href="https://www.flaticon.com/" title="Flaticon">
+                    www.flaticon.com
+                </a>
+            </div>
         </footer>
     </body>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
