--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -1,4 +1,4 @@
-{% extends 'first_app/main.html' %}
+{% extends 'first_app/template.html' %}
 
 {% block content %}
 
@@ -6,7 +6,9 @@
     <div class="d-flex justify-content-center h-100">
         <div class="user_card">
             <div class="d-flex justify-content-center">
-                <h3 id="form-title">REGISTER ACCOUNT</h3>
+                <h3 id="form-title">
+                    Registrar nova conta
+                </h3>
             </div>
             <div class="d-flex justify-content-center form_container">
 
@@ -39,14 +41,20 @@
                     </div>
 
                     <div class="d-flex justify-content-center mt-3 login_container">
-                        <input class="btn login_btn" type="submit" value="Register Account">
+                        <input class="btn btn-success" type="submit" value="Criar conta">
                     </div>
                 </form>
             </div>
             {{form.errors}}
             <div class="mt-4">
                 <div class="d-flex justify-content-center links">
-                    Already have an account? <a href="{% url 'login' %}" class="ml-2">Login</a>
+                    <p>Já possui uma conta?</p>
+                    <br>
+                    <a href="{% url 'login' %}" class="ml-2">
+                        <button class="btn login_btn">
+                            Entrar
+                        </button>
+                    </a>
                 </div>
             </div>
         </div>
@@ -56,10 +64,10 @@
 
     //Query All input fields
     var form_fields = document.getElementsByTagName('input')
-    form_fields[1].placeholder='Username..';
-    form_fields[2].placeholder='Email..';
-    form_fields[3].placeholder='Enter password...';
-    form_fields[4].placeholder='Re-enter Password...';
+    form_fields[1].placeholder='Nome de usuário..';
+    form_fields[2].placeholder='E-mail..';
+    form_fields[3].placeholder='Senha...';
+    form_fields[4].placeholder='Coloque a senha novamente...';
 
 
     for (var field in form_fields){
