--- a/first_app/templates/first_app/add_records.html
+++ b/first_app/templates/first_app/add_records.html
@@ -1,52 +1,65 @@
 {% extends 'first_app/template.html' %}
 
-{% include 'first_app/navbar.html' %}
+{% load static %}
 
 {% block content %}
 
-<div class="container h-100" name="form-container">
-    <div class="d-flex justify-content-center h-100">
-        <div class="user_card">
-            <div class="d-flex justify-content-center">
-                <h3 id="form-title">{{operation_type}} register</h3>
-            </div>
-            <div class="d-flex justify-content-center form_container">
+{% include 'first_app/navbar.html' %}
 
-                <form method="POST" action="">
-                    {% csrf_token %}
+<div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
+    <h1 class="display-4">
+        Inserir dados
+    </h1>
+</div>
+<br>
+<hr>
+<div id="table-center" class="row">
+    <div class="col">
+        <form method="POST" action="">
+            {% csrf_token %}
 
-                    <p style="display:none;">
-                        {{form.user.label}}
-                        {{form.user}}
-                    </p>
-
+            <div class="col-md">
                     <div class="table-responsive">
-                        <table class="table table-borderless form_container">
-                            <tr>
-                                <th>Name:</th>
-                                <td>{{form.name}}</td>
-                            </tr>
-                            <tr>
-                                <th>Category:</th>
-                                <td>{{form.category}}</td>
-                            </tr>
-                            <tr>
-                                <th>Value:</th>
-                                <td>{{form.value}}</td>
-                            </tr>
-                            <tr>
-                                <th>Month:</th>
-                                <td>{{form.month}}</td>
-                            </tr>
+                        <table class="table table-dark">
+                            <thead>
+                                <tr>
+                                    <th scope="col">Nome</th>
+                                    <th scope="col">Categoria</th>
+                                    <th scope="col">Fixo ou variável?</th>
+                                    <th scope="col">Mês de início</th>
+                                    <th scope="col">Valor</th>
+                                    <th style="color:red" scope="col">Deletar Linha</th>
+                                </tr>
+                            </thead>
+                            <tbody id="registers">
+                                <tr>
+                                    <td>Salário Empresa 1</td>
+                                    <td>Receita</td>
+                                    <td>Fixo</td>
+                                    <td>Janeiro</td>
+                                    <td>4000</td>
+                                    <td><img id="trash" src="{% static 'images/delete.png' %}" width="24" height="24"></td>
+                                </tr>
+                            </tbody>
                         </table>
                     </div>
-
-                    <div class="d-flex justify-content-center mt-3 login_container">
-                        <input class="btn btn-success" type="submit" name="Confirm" value="Confirm">
-                    </div>
-                </form>
             </div>
-        </div>
+            <div class="d-flex justify-content-center links">
+                <a id="add-row" class="ml-2">
+                    <button type="button" class="btn btn-info">
+                        Adicionar Linha
+                    </button>
+                </a>
+            </div>
+            <div class="d-flex justify-content-center links">
+                <a href="" class="ml-2">
+                    <div class="d-flex justify-content-center mt-3 login_container">
+                        <input class="btn btn-success" type="submit" value="Salvar Registros">
+                    </div>
+                </a>
+            </div>
+            <br>
+        </form>
     </div>
 </div>
 
