--- a/first_app/templates/first_app/template.html
+++ b/first_app/templates/first_app/template.html
@@ -6,14 +6,13 @@
         <title>Assistente Financeiro</title>
 
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
-
         <link rel="shortcut icon" type="image/png" href="{% static 'images/icon.png' %}"/>
-
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+        <link rel="stylesheet" type="text/css" href="{% static '/css/template.css' %}">
 
-        <link rel="stylesheet" type="text/css" href="{% static "/css/template.css" %}">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+        <script src="{% static '/js/add_delete_row.js' %}"></script>
 
     </head>
     <body>
@@ -22,6 +21,9 @@
 
         {% endblock %}
 
+        <br>
+        <br>
+        <br>
         <br>
 
         <footer class="footer mt-auto py-3">
