--- a/first_app/templates/first_app/budget_control.html
+++ b/first_app/templates/first_app/budget_control.html
@@ -68,7 +68,7 @@
             </h5>
             <hr>
             <div class="table-responsive">
-                <a class="btn btn-primary btn-hover btn-block" href="{% url 'add' %}">
+                <a class="btn btn-primary btn-hover btn-block" href="">
                     Add records
                 </a>
                 <table class="table table-dark">
