--- a/first_app/templates/first_app/help.html
+++ b/first_app/templates/first_app/help.html
@@ -38,48 +38,40 @@
                             <td>Receita</td>
                             <td>Fixo</td>
                             <td>4000</td>
-                            <td><img id="trash" src="{% static 'images/delete.png' %}" width="24" height="24"></td>
+                            <td><input type="checkbox" disabled></td>
                         </tr>
                         <tr>
                             <td>Venda de doces</td>
                             <td>Receita</td>
                             <td>Variável</td>
                             <td>1000</td>
-                            <td><img id="trash" src="{% static 'images/delete.png' %}" width="24" height="24"></td>
+                            <td><input type="checkbox" disabled></td>
                         </tr>
                         <tr>
                             <td>Aluguel</td>
                             <td>Despesa</td>
                             <td>Fixo</td>
                             <td>2000</td>
-                            <td><img id="trash" src="{% static 'images/delete.png' %}" width="24" height="24"></td>
+                            <td><input type="checkbox" disabled></td>
                         </tr>
                         <tr>
                             <td>CDB Banco X</td>
                             <td>Investimento</td>
                             <td>Variável</td>
                             <td>500</td>
-                            <td><img id="trash" src="{% static 'images/delete.png' %}" width="24" height="24"></td>
+                            <td><input type="checkbox" disabled></td>
                         </tr>
                         <tr>
                             <td>Carro</td>
                             <td>Bem</td>
                             <td>Fixo</td>
                             <td>45000</td>
-                            <td><img id="trash" src="{% static 'images/delete.png' %}" width="24" height="24"></td>
+                            <td><input type="checkbox" disabled></td>
                         </tr>
                     </tbody>
                 </table>
             </div>
         </div>
-        <div class="d-flex justify-content-center links">
-            <a href="" class="ml-2">
-                <button type="button" class="btn btn-info" disabled>
-                    Adicionar Linha
-                </button>
-            </a>
-        </div>
-        <br>
         <div class="d-flex justify-content-center links">
             <a href="" class="ml-2">
                 <button type="button" class="btn btn-success" disabled>
@@ -89,7 +81,7 @@
         </div>
         <br>
         <div class="d-flex justify-content-center links">
-            <a href="{% url 'add' %}" class="ml-2">
+            <a href="{% url 'add' id %}" class="ml-2">
                 <button type="button" class="btn btn-info">
                     Começar a inserir dados
                 </button>
