Inserção facilitada finalizada

--- a/first_app/templates/first_app/navbar.html
+++ b/first_app/templates/first_app/navbar.html
@@ -13,12 +13,17 @@
         <ul class="navbar-nav">
             <li class="nav-item active">
                 <a class="nav-link" href="{% url 'budget' %}">
-                    Dashboard orçamentário
+                    Dashboard
                 </a>
             </li>
             <li class="nav-item active">
                 <a class="nav-link" href="{% url 'help' %}">
                     Ajuda
+                </a>
+            </li>
+            <li class="nav-item active">
+                <a class="nav-link" href="{% url 'add' id %}">
+                    Inserir Dados
                 </a>
             </li>
             <li class="nav-item active">
