--- a/first_app/templates/first_app/budget_control.html
+++ b/first_app/templates/first_app/budget_control.html
@@ -36,21 +36,21 @@
                     </thead>
                     <tbody>
                         <tr>
-                            <th scope="col">Total Profit</th>
+                            <th scope="col">Receita Total</th>
                             {% for profit in result %}
                                 <td>{{profit.0}}</td>
                             {% endfor %}
                         </tr>
                         <tr>
-                            <th scope="col">Total Spend</th>
-                            {% for profit in result %}
-                                <td>{{profit.1}}</td>
+                            <th scope="col">Despesa Total</th>
+                            {% for spend in result %}
+                                <td>{{spend.1}}</td>
                             {% endfor %}
                         </tr>
                         <tr>
-                            <th scope="col">Sum</th>
-                            {% for profit in result %}
-                                <td>{{profit.2}}</td>
+                            <th scope="col">Soma</th>
+                            {% for sum in result %}
+                                <td>{{sum.2}}</td>
                             {% endfor %}
                         </tr>
                     </tbody>
@@ -64,21 +64,21 @@
     <div class="col">
         <div class="col-md">
             <h5>
-                Budget Records Table:
+                Tabela dos Registros Orçamentários:
             </h5>
             <hr>
             <div class="table-responsive">
                 <a class="btn btn-primary btn-hover btn-block" href="">
-                    Add records
+                    Adicionar registros
                 </a>
                 <table class="table table-dark">
                     <tr>
-                        <th>Name</th>
-                        <th>Category</th>
-                        <th>Value</th>
-                        <th>Month</th>
-                        <th>Update</th>
-                        <th>Remove</th>
+                        <th>Nome</th>
+                        <th>Categoria</th>
+                        <th>Valor</th>
+                        <th>Mês</th>
+                        <th>Atualizar</th>
+                        <th>Remover</th>
                     </tr>
 
                     {% for register in budget_registers %}
