--- a/first_app/templates/first_app/status.html
+++ b/first_app/templates/first_app/status.html
@@ -6,7 +6,7 @@
             <div class="card text-center text-white mb-3" id="investments-total">
                   <div class="card-header">
                       <h5 class="card-title">
-                        Investments Total Value
+                        Valor Total dos Investimentos
                     </h5>
                   </div>
                   <div class="card-body">
@@ -23,7 +23,7 @@
             <div class="card text-center text-white mb-3" id="spends-total">
                   <div class="card-header">
                       <h5 class="card-title">
-                        Spends Total Value
+                        Valor Total das Despesas
                     </h5>
                   </div>
                   <div class="card-body">
@@ -40,12 +40,12 @@
             <div class="card text-center text-white mb-3" id="goods-total">
                   <div class="card-header">
                       <h5 class="card-title">
-                        Goods Total Value
+                        Valor Total das Receitas
                     </h5>
                   </div>
                   <div class="card-body">
                     <h3 class="card-title">
-                        {{goods_sum}}
+                        {{profits_sum}}
                     </h3>
                   </div>
             </div>
