finalizando parte de inserção facilitada e fazendo alteração na tela do dashboard para que a tabela que possui todos os dados do banco seja dinamicamente editável

--- a/first_app/templates/first_app/add_records.html
+++ b/first_app/templates/first_app/add_records.html
@@ -67,9 +67,9 @@
             </div>
             <br>
             <div class="d-flex justify-content-center links">
-                <a href="{% url 'budget' %}" class="ml-2">
+                <a href="{% url 'organize' %}" class="ml-2">
                     <button type="button" class="btn btn-info">
-                        Visualizar Dashboard
+                        Concluir Inserção
                     </button>
                 </a>
             </div>
@@ -77,7 +77,5 @@
         </form>
     </div>
 </div>
-
-<!-- <script src="{% static '/js/add_delete_row.js' %}"></script> -->
 
 {% endblock %}
