--- a/first_app/templates/first_app/delete.html
+++ b/first_app/templates/first_app/delete.html
@@ -1,14 +1,14 @@
 {% extends 'first_app/template.html' %}
 
-{% include 'first_app/navbar.html' %}
-
 {% block content %}
+
+{% include 'first_app/navbar.html' %}
 
 <div class="container h-100" name="form-container">
     <div class="d-flex justify-content-center h-100">
         <div class="user_card">
             <div class="d-flex justify-content-center">
-                <h3 id="form-title">Are you sure you want to delete "{{item}}"?</h3>
+                <h3 id="form-title">Você tem certeza que deseja excluir o registro: "{{item}}"?</h3>
             </div>
             <div class="d-flex justify-content-center form_container">
 
@@ -17,7 +17,7 @@
 
                     <div class="d-flex justify-content-center mt-3 login_container">
                         <button type="button" class="btn btn-danger">
-                            <a style="color:white" href="{% url 'budget' %}">Cancel</a>
+                            <a style="color:white" href="{% url 'budget' %}">Cancelar</a>
                         </button>
                     </div>
 
