--- a/first_app/templates/first_app/help.html
+++ b/first_app/templates/first_app/help.html
@@ -81,7 +81,7 @@
         </div>
         <br>
         <div class="d-flex justify-content-center links">
-            <a href="{% url 'add' id %}" class="ml-2">
+            <a href="{% url 'add' %}" class="ml-2">
                 <button type="button" class="btn btn-info">
                     Começar a inserir dados
                 </button>
