--- a/first_app/templates/first_app/navbar.html
+++ b/first_app/templates/first_app/navbar.html
@@ -22,7 +22,7 @@
                 </a>
             </li>
             <li class="nav-item active">
-                <a class="nav-link" href="{% url 'add' id %}">
+                <a class="nav-link" href="{% url 'add' %}">
                     Inserir Dados
                 </a>
             </li>
